--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@types/qs": "^6.5.3",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "html2canvas": "^1.0.0-rc.5",
+    "qs": "^6.9.0",
     "vant": "^2.2.9",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
